Prevent long user names from overflowing

--- a/client/templates/items_dial/items_dial.css
+++ b/client/templates/items_dial/items_dial.css
@@ -64,6 +64,9 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .circle, .line {
